Ajoute des photes sur Mbaye sene et Mr Harik

--- a/entreprise.html
+++ b/entreprise.html
@@ -134,7 +134,7 @@
 <!-- Testimonial 1 -->
 <div class="bg-white p-8 rounded-lg shadow-md">
 <div class="flex items-center mb-6">
-<img alt="Harik M." class="w-16 h-16 rounded-full mr-4" src=""/>
+<img alt="Harik M." class="w-16 h-16 rounded-full mr-4" src="img/unnamed.jpg"/>
 <div>
 <h4 class="font-bold">Mohamed Harik</h4>
 <p class="text-gray-600">Directeur Digicrafts</p>
@@ -151,7 +151,7 @@
 <p class="text-gray-600">Directeur Menuiserie Bawol </p>
 </div>
 </div>
-<p class="text-gray-700 italic">"La plateforme est intuitive et nous permet de gérer facilement nos freelances. Le système de paiement sécurisé est un vrai plus."</p>
+<p class="text-gray-700 italic">"La plateforme est intuitive et nous permet de gérer facilement nos freelances pour notre site Web. Le système de paiement sécurisé est un vrai plus."</p>
 </div>
 </div>
 </div>
