rename photo mbayephoto

--- a/entreprise.html
+++ b/entreprise.html
@@ -145,7 +145,7 @@
 <!-- Testimonial 2 -->
 <div class="bg-white p-8 rounded-lg shadow-md">
 <div class="flex items-center mb-6">
-<img alt="M.SENE" class="w-16 h-16 rounded-full mr-4" src="img/1.jpg"/>
+<img alt="M.SENE" class="w-16 h-16 rounded-full mr-4" src="img/mbayephoto.jpg"/>
 <div>
 <h4 class="font-bold">Mbaye SENE</h4>
 <p class="text-gray-600">Directeur Menuiserie Bawol </p>
