modification des card projets2

--- a/projet2.html
+++ b/projet2.html
@@ -284,7 +284,7 @@ input:focus, select:focus {
 <img alt="BeugFallouCar" class="w-full h-40 object-cover" loading="lazy" src="img/BeugFallouCar - [127.0.0.1].png"/>
 <div class="p-4">
 <h2 class="text-lg font-bold">BeugFallouCar</h2>
-<p class="text-sm text-gray-500">Mina Mané</p>
+<p class="text-sm text-gray-500">Moustapha Diallo</p>
 <div class="mt-2 text-sm flex flex-wrap gap-2">
 <span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">HTML</span>
 <span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">CSS</span>
@@ -297,13 +297,14 @@ input:focus, select:focus {
 </div>
 <!-- Project Card 3 -->
 <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition relative">
-<img alt="Plateforme de Réseau Social" class="w-full h-40 object-cover" loading="lazy" src="img/projetcard3.jpg"/>
+<img alt="Plateforme de Réseau Social" class="w-full h-40 object-cover" loading="lazy" src="img/yombal_connect.png"/>
 <div class="p-4">
-<h2 class="text-lg font-bold">Plateforme de Réseau Social</h2>
-<p class="text-sm text-gray-500">Ibrahima LO</p>
+<h2 class="text-lg font-bold">Yombal Connect</h2>
+<p class="text-sm text-gray-500">Alpha Diop</p>
 <div class="mt-2 text-sm flex flex-wrap gap-2">
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Angular</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Firebase</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">React.js</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Django</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">MongoDB</span>
 </div>
 <div class="flex items-center justify-between mt-4">
 <span class="font-bold text-indigo">3.250 MAD</span>
@@ -315,12 +316,10 @@ input:focus, select:focus {
 <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition relative">
 <img alt="Site Portfolio" class="w-full h-40 object-cover" loading="lazy" src="img/projetcard4.jpg"/>
 <div class="p-4">
-<h2 class="text-lg font-bold">Site Portfolio</h2>
-<p class="text-sm text-gray-500">Khadija Cissé</p>
+<h2 class="text-lg font-bold">Chatgpt-CLI</h2>
+<p class="text-sm text-gray-500">Elias Waly Ba</p>
 <div class="mt-2 text-sm flex flex-wrap gap-2">
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">HTML</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">CSS</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">JS</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Coquille</span>
 </div>
 <div class="flex items-center justify-between mt-4">
 <span class="font-bold text-indigo">541 MAD</span>
@@ -330,14 +329,12 @@ input:focus, select:focus {
 </div>
 <!-- Project Card 5 -->
 <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition relative">
-<img alt="Système de Blog CMS" class="w-full h-40 object-cover" loading="lazy" src="img/projetcard5.jpg"/>
+<img alt="Système de Blog CMS" class="w-full h-40 object-cover" loading="lazy" src="img/NumMenu-bot.jpg"/>
 <div class="p-4">
-<h2 class="text-lg font-bold">Système de Blog CMS</h2>
-<p class="text-sm text-gray-500">Dame Seck</p>
+<h2 class="text-lg font-bold">NumMenu-bot</h2>
+<p class="text-sm text-gray-500">Derguene Mbaye</p>
 <div class="mt-2 text-sm flex flex-wrap gap-2">
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">PHP</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">MySQL</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">jQuery</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Python</span>
 </div>
 <div class="flex items-center justify-between mt-4">
 <span class="font-bold text-indigo">1.300 MAD</span>
@@ -347,14 +344,15 @@ input:focus, select:focus {
 </div>
 <!-- Project Card 6 -->
 <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition relative">
-<img alt="Kit UI Mobile" class="w-full h-40 object-cover" loading="lazy" src="img/projetcard6.jpg"/>
+<img alt="Kit UI Mobile" class="w-full h-40 object-cover" loading="lazy" src="img/waxtane.png"/>
 <div class="p-4">
-<h2 class="text-lg font-bold">Kit UI Mobile</h2>
-<p class="text-sm text-gray-500">Bruno A. Diallo</p>
+<h2 class="text-lg font-bold">Waxtane</h2>
+<p class="text-sm text-gray-500">Médoune Siby G. Baldé</p>
 <div class="mt-2 text-sm flex flex-wrap gap-2">
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Sketch</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Figma</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">XD</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Svelte</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Astro</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">CSS</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">JS</span>
 </div>
 <div class="flex items-center justify-between mt-4">
 <span class="font-bold text-indigo">920 MAD</span>
@@ -364,14 +362,15 @@ input:focus, select:focus {
 </div>
 <!-- Project Card 7 -->
 <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition relative">
-<img alt="Tableau de Bord Analytics" class="w-full h-40 object-cover" loading="lazy" src="img/projetcard7.jpg"/>
+<img alt="Tableau de Bord Analytics" class="w-full h-40 object-cover" loading="lazy" src="img/algovisualiseur.png"/>
 <div class="p-4">
-<h2 class="text-lg font-bold">Tableau de Bord Analytics</h2>
-<p class="text-sm text-gray-500">Ibrahima Diouf</p>
+<h2 class="text-lg font-bold">Algo-visualiseur</h2>
+<p class="text-sm text-gray-500">Elias Waly Ba</p>
 <div class="mt-2 text-sm flex flex-wrap gap-2">
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">React</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">D3.js</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">API</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Elixir</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">HTML</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">CSS</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">JS</span>
 </div>
 <div class="flex items-center justify-between mt-4">
 <span class="font-bold text-indigo">2.383 MAD</span>
@@ -381,14 +380,12 @@ input:focus, select:focus {
 </div>
 <!-- Project Card 8 -->
 <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition relative">
-<img alt="Plateforme d'Apprentissage" class="w-full h-40 object-cover" loading="lazy" src="img/projetcard8.jpg"/>
+<img alt="Plateforme d'Apprentissage" class="w-full h-40 object-cover" loading="lazy" src="img/somnolence.png"/>
 <div class="p-4">
-<h2 class="text-lg font-bold">Plateforme d'Apprentissage</h2>
-<p class="text-sm text-gray-500">Aicha Rassoul</p>
+<h2 class="text-lg font-bold">SomnolenceDétection</h2>
+<p class="text-sm text-gray-500">Thierno</p>
 <div class="mt-2 text-sm flex flex-wrap gap-2">
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Laravel</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Vue</span>
-<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">AWS</span>
+<span class="bg-gray-100 text-gray-800 px-2 py-1 rounded-full text-xs">Python</span>
 </div>
 <div class="flex items-center justify-between mt-4">
 <span class="font-bold text-indigo">2.500 MAD</span>
@@ -565,7 +562,7 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 });
 
-// Données  des projets popup
+// Données  des projets popup projets 2
 const projects = [
     {
         title: "AgriLink",
@@ -579,7 +576,7 @@ const projects = [
     },
     {
         title: "BeugFallouCar",
-        author: "Mina Mané",
+        author: "Moustapha Diallo",
         category: "Site loca&Vente voiture",
         price: "3.325 MAD",
         image: "img/BeugFallouCar - [127.0.0.1].png",
@@ -588,64 +585,64 @@ const projects = [
         github: "#"
     },
     {
-        title: "Plateforme de Réseau Social",
-        author: "Ibrahima LO",
-        category: "Réseau Social",
+        title: "Yombal Connect",
+        author: "Alpha Diop",
+        category: "vitrine professionnelle",
         price: "3.250 MAD",
-        image: "img/projetcard3.jpg",
-        technologies: ["Angular", "Firebase"],
-        description: `Plateforme de réseau social avec fonctionnalités de publication, commentaires, likes et messagerie instantanée. Développée avec Angular et Firebase pour le backend.`,
+        image: "img/yombal_connect.png",
+        technologies: ["React.js", "Django", "MongoDB"],
+        description: `Yombal Connect est une plateforme de mise en relation professionnelle et sociale, dédiée aux entrepreneurs et particuliers africains pour faciliter les échanges et collaborations. Le site offre des services variés, allant de la recherche de partenaires commerciaux à la promotion d'événements locaux.`,
         github: "#"
     },
     {
-        title: "Site Portfolio",
-        author: "Khadija Cissé",
-        category: "Site Web Personnel",
+        title: "Chatgpt-CLI",
+        author: "Elias Waly Ba",
+        category: "morceaux de code",
         price: "541 MAD",
         image: "img/projetcard4.jpg",
-        technologies: ["HTML", "CSS", "JavaScript"],
-        description: `Site portfolio moderne et responsive avec animations fluides. Parfait pour présenter vos travaux et compétences. Code propre et bien documenté.`,
-        github: "#"
+        technologies: ["Coquille"],
+        description: `Une interface de ligne de commande (CLI) simple pour interagir avec le modèle ChatGPT d’OpenAI.`,
+        github: "https://github.com/elias-ba/chatgpt-cli"
     },
     {
-        title: "Système de Blog CMS",
-        author: "Dame Seck",
+        title: "NumMenu-bot",
+        author: "Derguene Mbaye",
         category: "Système de Gestion de Contenu",
         price: "1.300 MAD",
-        image: "img/projetcard5.jpg",
-        technologies: ["PHP", "MySQL", "jQuery"],
-        description: `CMS de blog complet avec éditeur WYSIWYG, gestion des utilisateurs et système de commentaires. Développé avec PHP natif et MySQL.`,
-        github: "#"
+        image: "img/NumMenu-bot.jpg",
+        technologies: ["Python"],
+        description: `Un exemple de chatbot avec un menu basé sur des chiffres qui peut être utilisé comme point de départ pour un projet.`,
+        github: "https://github.com/DerXter/NumMenu-Bot"
     },
     {
-        title: "Kit UI Mobile",
-        author: "Bruno A. Diallo",
-        category: "Design UI/UX",
+        title: "Waxtane",
+        author: "Médoune Siby G. Baldé",
+        category: "Languages",
         price: "920 MAD",
         image: "img/projetcard6.jpg",
-        technologies: ["Sketch", "Figma", "Adobe XD"],
-        description: `Kit d'interface utilisateur moderne pour applications mobiles. Comprend plus de 50 composants personnalisables et un système de design cohérent.`,
-        github: "#"
+        technologies: ["Svelte", "Astro", "CSS", "JS"],
+        description: `Waxtane est un receuil de phrases de discussion traduites en cinq langues (pour le moment). Le Wolof, le Francais, l'Anglais, l'Espagnol et le Catalan. Waxtane vise à faciliter la communication entre personnes parlant différentes langues, en se basant sur un modèle sans prise de têtes la discussion.`,
+        github: "https://github.com/MedouneSGB/Waxtane"
     },
     {
-        title: "Tableau de Bord Analytics",
-        author: "Ibrahima Diouf",
+        title: "Algo-visualiseur",
+        author: "Elias Waly Ba",
         category: "Visualisation de Données",
         price: "2.383 MAD",
-        image: "img/projetcard7.jpg",
-        technologies: ["React", "D3.js", "API REST"],
-        description: `Tableau de bord analytique avec visualisations interactives et temps réel. Intègre plusieurs sources de données et offre des options d'export.`,
-        github: "#"
+        image: "img/algovisualiseur.png",
+        technologies: ["Elixir", "HTML", "CSS", "JS"],
+        description: `Algo-visualiseur est une plate-forme interactive basée sur le Web pour visualiser divers algorithmes, en mettant l’accent sur les algorithmes de recherche de chemin. Construit à l’aide d’Elixir et de Phoenix LiveView, il permet aux utilisateurs d’interagir et d’observer le comportement de différents algorithmes en temps réel.`,
+        github: "https://github.com/elias-ba/algo-visualizer"
     },
 
        {
-        title: "Plateforme d'Apprentissage",
-        author: "Aicha Rassoul",
-        category: "Plateforme d'Apprentissage",
+        title: "SomnolenceDétection",
+        author: "Thierno",
+        category: "SomnolenceDétection",
         price: "2.500 MAD",
         image: "img/projetcard8.jpg",
-        description: `Une application E-commerce permet aux utilisateurs d'acheter des produits en ligne...`,
-        github: "#"
+        description: `SomnolenceDétection est un système d’alerte de sécurité pour la somnolence du conducteur.`,
+        github: "https://github.com/TiDev00/DrowsinessDetection"
       },
       // Ajoutez ici les 7 autres projets avec leurs infos
     ];
