change des img des cards wx et somnolence

--- a/projet2.html
+++ b/projet2.html
@@ -619,7 +619,7 @@ const projects = [
         author: "Médoune Siby G. Baldé",
         category: "Languages",
         price: "920 MAD",
-        image: "img/projetcard6.jpg",
+        image: "img/waxtane.png",
         technologies: ["Svelte", "Astro", "CSS", "JS"],
         description: `Waxtane est un receuil de phrases de discussion traduites en cinq langues (pour le moment). Le Wolof, le Francais, l'Anglais, l'Espagnol et le Catalan. Waxtane vise à faciliter la communication entre personnes parlant différentes langues, en se basant sur un modèle sans prise de têtes la discussion.`,
         github: "https://github.com/MedouneSGB/Waxtane"
@@ -640,7 +640,7 @@ const projects = [
         author: "Thierno",
         category: "SomnolenceDétection",
         price: "2.500 MAD",
-        image: "img/projetcard8.jpg",
+        image: "img/somnolence.png",
         description: `SomnolenceDétection est un système d’alerte de sécurité pour la somnolence du conducteur.`,
         github: "https://github.com/TiDev00/DrowsinessDetection"
       },
