contact des developper

--- a/developper.html
+++ b/developper.html
@@ -414,7 +414,7 @@ API de gestion de contenu avec Node.js
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="#">Contacter</a>
+<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212766395253?text=Bonjour%20Ibrahima%20LO,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
@@ -486,7 +486,7 @@ Refonte UI d'une plateforme éducative
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/00212766395253?text=Bonjour%20Ibrahima%20Cisse,%20j'ai%20une%20question!" target="_blank">Contacter</a>
+<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212766395253?text=Bonjour%20Ibrahima%20Cisse,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
@@ -774,7 +774,7 @@ Prototype d'application de santé
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="#">Contacter</a>
+<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212766395253?text=Bonjour%20Saly%20SENE,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
