Changement des conctats de chaque developpeur

--- a/developper.html
+++ b/developper.html
@@ -486,7 +486,7 @@ Refonte UI d'une plateforme éducative
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212766395253?text=Bonjour%20Ibrahima%20Cisse,%20j'ai%20une%20question!" target="_blank">Contacter</a>
+<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212632305829?text=Bonjour%20Matar%20Seck,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
@@ -558,7 +558,7 @@ Migration de base de données legacy
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/00212780003847?text=Bonjour,%20j'ai%20une%20question!" target="_blank">Contacter</a>
+<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212645950858?text=Bonjour%20Dame%20Seck,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
@@ -630,7 +630,7 @@ Application bancaire avec authentification
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/00212679940601?text=Bonjour,%20j'ai%20une%20question!" target="_blank">Contacter</a>
+<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212679940601?text=Bonjour%20Ibrahima%20Cisse,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
@@ -702,7 +702,7 @@ AgriLink: Laison entre l'agriculture et la transformation
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-gray-200 text-gray-500 px-4 py-2 !rounded-button font-medium cursor-not-allowed whitespace-nowrap" href="https://wa.me/0657593667?text=Bonjour,%20j'ai%20une%20question!" target="_blank">Contacter</a>
+<a class="bg-gray-200 text-gray-500 px-4 py-2 !rounded-button font-medium cursor-not-allowed whitespace-nowrap" href="https://wa.me/+2120657593667?text=Bonjour,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
@@ -774,7 +774,7 @@ Prototype d'application de santé
 <i class="ri-heart-line"></i>
 </div>
 </button>
-<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+212766395253?text=Bonjour%20Saly%20SENE,%20j'ai%20une%20question!" target="_blank">Contacter</a>
+<a class="bg-primary text-white px-4 py-2 !rounded-button font-medium hover:bg-blue-600 transition-colors whitespace-nowrap" href="https://wa.me/+221764139009?text=Bonjour%20Saly%20SENE,%20j'ai%20une%20question!" target="_blank">Contacter</a>
 </div>
 </div>
 </div>
